tests/fixtures/invalid/pow_dict_list_list.py
# Cannot call pow() with Dict[str, int], List[int], List[int]
x = pow({"a": 1}, [1, 2, 3], [1, 2, 3])
